src/App.scss
@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');

/* Colors */
$dark-bg: #312f2f;
$white: #fff;
$white-shade: #f2f2f2;

/* Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  --lh: 1.4rem;
  line-height: var(--lh);
}

body {
  background-color: #9c5555;
  font-family: "Roboto Slab", sans-serif;
  width: 100%;
  height: 100vh;
}

.hero {
  text-align: center;
  background-color: $dark-bg;
  padding: 2rem;
  margin-bottom: 1rem;
  width: 100vw;

  .title {
    color: $white;
  }
  .subtitle {
    color: $white-shade;
  }
}

  .row {
    display: flex;
    flex-wrap: wrap;

    .column {
      align-items: flex-start;
      width: 25%;
      padding: 1rem 10px;

      .card {
        border-radius: 5px;
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
        padding: 16px;
        text-align: center;
        background-color: $white-shade;

        .title {
          font-weight: 700;
          margin-bottom: 1rem;
        }

        .card-content {
    

          .card-image {
            .image {
              img {
                border-radius: 5px;
              }
            }
          }
          .card-text {

            .truncate-overflow {
              --max-lines: 5;
              position: relative;
              max-height: calc(var(--lh) * var(--max-lines));
              overflow: hidden;
              padding-right: 1rem; /* space for ellipsis */
              &::before {
                position: absolute;
                content: "...";
                inset-block-end: 0; /* "bottom" */
                inset-inline-end: 0; /* "right" */
              }
              &::after {
                content: "";
                position: absolute;
                inset-inline-end: 0; /* "right" */
                width: 1rem;
                height: 1rem;
                background: white;
              }
            }
              .overview {
                margin-top: 1rem;
              }
              .vote {
                margin: 1rem 0;
                font-size: 1.5rem;

              }
          }
        }
      }

    }

    
  }

